--- a/docs/styles.css
+++ b/docs/styles.css
@@ -165,6 +165,10 @@ body {
   padding-inline: 0;
   font-size: 22px;
   line-height: 1;
+  background: transparent;
+  border: none;
+  outline: none;
+  box-shadow: none;
 }
 
 .board-viewport {
