Update bomb icon color to #8E0002

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -143,7 +143,7 @@ body {
 }
 
 .hud__icon--bomb {
-  color: #ff903b;
+  color: #8E0002;
 }
 
 .hud__button-amount {
@@ -346,7 +346,7 @@ body {
 }
 
 .badge--bomb {
-  color: #ff903b;
+  color: #8E0002;
 }
 
 .badge--swapper {
